<resources>
    <string name="app_name">Penny Bank</string>
    <string-array name="deposit_frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="saving_method">
        <item>By deposit</item>
        <item>By end date</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Product class fields -->
    <string name="product_name_colon">Product name:</string>
    <string name="product_price_colon">Product price:</string>
    <string name="deposit_frequency_colon">Deposit frequency:</string>
    <string name="saving_method_colon">Saving method:</string>
    <string name="deposit_colon">Deposit:</string>
    <string name="saving_colon">Savings:</string>
    <string name="start_date_colon">Start date:</string>
    <string name="end_date_colon">End date:</string>
    <string name="reminder_time_colon">Reminder time:</string>

    <string name="settings_colon">Settings:</string>
    <string name="edit">Edit</string>
</resources>
