<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_image"
        android:gravity="center"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_label">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2">

            <TextView
                android:id="@+id/product_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="0"
                android:padding="4dp"
                android:text="@string/product_price_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/deposit_frequency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="1"
                android:padding="4dp"
                android:text="@string/deposit_frequency_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/settings_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="2"
                android:padding="4dp"
                android:text="@string/saving_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="3"
                android:padding="4dp"
                android:text="@string/start_date_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/saving_method_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="4"
                android:padding="4dp"
                android:text="@string/saving_method_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/end_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="5"
                android:padding="4dp"
                android:text="@string/end_date_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/deposit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="6"
                android:padding="4dp"
                android:text="@string/deposit_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/reminder_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_row="7"
                android:padding="4dp"
                android:text="@string/reminder_time_colon"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:ems="10"
                android:inputType="number" />

            <Spinner
                android:id="@+id/deposit_frequency"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_column="1"
                android:layout_row="1"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <Spinner
                android:id="@+id/saving_method"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_column="1"
                android:layout_row="4"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="5"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <EditText
                android:id="@+id/deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="6"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="7"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date" />

        </GridLayout>

    </ScrollView>

    <Switch
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/scroll_view"
        android:checked="true"
        android:padding="8dp"
        android:text="@string/edit" />

</RelativeLayout>