<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center">


    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name_colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_label"
        android:layout_toStartOf="@+id/choose_picture" />

    <TextView
        android:id="@+id/product_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name"
        android:text="@string/product_price_colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/deposit_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_label"
        android:layout_centerHorizontal="true"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/saving_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deposit_frequency"
        android:layout_centerHorizontal="true"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saving_method"
        android:text="@string/end_date_colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/deposit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/saving_method"
        android:text="@string/deposit_colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/end_date_label"
        android:layout_toStartOf="@+id/save"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="date" />

    <EditText
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/end_date"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/save"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/end_date"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_price_label"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deposit"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_size"
        android:height="@dimen/button_size"
        android:background="@drawable/save_button"
        android:clickable="true" />

    <Button
        android:id="@+id/choose_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:width="@dimen/button_size"
        android:height="@dimen/button_size"
        android:background="@drawable/gallery_button"
        android:clickable="true" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/save"
        android:width="@dimen/button_size"
        android:height="@dimen/button_size"
        android:background="@drawable/back_button"
        android:clickable="true" />
</RelativeLayout>


